crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__comptime_nested_call.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "comptime { read(1 2) }"
---
alder::syntax

  × I was expecting `,` or `)` after this call argument
   ╭─[/project/src/main.ald:1:19]
 1 │ comptime { read(1 2) }
   ·                ┬  ┬
   ·                │  ╰── expected `,` or `)`
   ·                ╰── this `(` opens here
   ╰────
  help: separate arguments with commas and close the call with `)`
