crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__comptime_open.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: comptime 1
---
alder::syntax

  × I was expecting `{` to start this block
   ╭─[/project/src/main.ald:1:10]
 1 │ comptime 1
   · ┬        ┬
   · │        ╰── expected `{`
   · ╰── this `comptime` block starts here
   ╰────
