crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__declaration_async_keyword.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "async work() {}"
---
alder::syntax

  × I was expecting `fn` after `async` in this declaration
   ╭─[/project/src/main.ald:1:7]
 1 │ async work() {}
   · ┬     ┬
   · │     ╰── expected `fn`
   · ╰── this function declaration starts here
   ╰────
