crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__declaration_function_name.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "fn Upper() {}"
---
alder::syntax

  × I was expecting a name for this function
   ╭─[/project/src/main.ald:1:4]
 1 │ fn Upper() {}
   · ┬  ┬
   · │  ╰── expected a lower-case name
   · ╰── this function declaration starts here
   ╰────
