crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__declaration_function_return.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "fn work() Array[] {}"
---
alder::syntax

  × type argument lists cannot be empty
   ╭─[/project/src/main.ald:1:17]
 1 │ fn work() Array[] {}
   ·                ┬┬
   ·                │╰── add a type argument or remove `[]`
   ·                ╰── this type argument list starts here
   ╰────
